--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,6 @@
 <%- include("./partials/header") %>
 <%- include("./partials/nav") %>
-
-
-<section>
-    
-    <div class="main-slide">
-        <div class="owl-carousel owl-config owl-theme">                    
-            <div class="item">
-                <div class="slider-principal">
-                    <div class="slider">
-                        <div class="slider-image slider-2"></div>                        
-                    </div>
-                </div>
-            </div>
-            <!--item-->
-            <div class="item">
-                <div class="slider-principal">
-                    <div class="slider">
-                        <div class="slider-image slider-3"></div>                        
-                    </div>
-                </div>
-            </div>
-            <!--item-->
-            <div class="item">
-                <div class="slider-principal">
-                    <div class="slider">
-                        <div class="slider-image slider-1"></div>                        
-                    </div>
-                </div>
-            </div>
-            <!--item-->
-        </div>
-    </div>
-</section>
+<%- include("./partials/slider") %>
 
 
 <section>
